@@ -14,6 +14,7 @@ changes since wmaker 0.62.1:
 - restructured the directory tree. Added Documentation, Examples and Tests
   subdirectories
 - removed WMArrayBag and reorganized WMTreeBag to be WMBag.
+- added WMArray class.
 
 
 changes since wmaker 0.62.0:
